added styling in both the jass and the style stylesheets. Created a whole model for comment under the server side and added a comment.js on the client side. Also added a partial and implimented the partial to the post handlebar.

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -420,7 +420,7 @@ button {
 }
 
 a {
-  color: #1b89bc;
+  color: #000000;
   text-decoration: none;
 }
 
@@ -879,6 +879,10 @@ a:hover {
   text-align: right !important;
 }
 
+.text-left{
+  text-align: left !important;
+}
+
 .text-primary {
   color: #2d3e50 !important;
 }
@@ -1009,12 +1013,18 @@ a:hover {
 }
 
 .btn.btn-primary {
-  background-color: #2d3e50;
-  color: #d9e9e8;
+  background-color: #ffffff;
+  border: #a4a4a4 solid 1.5pt;
+  color: #000000;
 }
 
 .btn.btn-primary:hover {
-  background-color: #57779a;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    border: #a4a4a4 solid 1pt;
 }
 
 .btn.btn-danger {
