--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,32 @@
 header, .project:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
-
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://media0.giphy.com/media/1pmatQ3LcP5XFYxSWF/giphy.gif?cid=ecf05e47sj72duruumnew97j2gg0bgnosmm1teasj4lk7pwz&rid=giphy.gif&ct=g");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  border-radius: 0.5%;
+  color: aliceblue;
+}
+.hero-image h2{
+  text-align: center;
+  padding: 2rem;
+  color: #fff;
+}
+.rainbow {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.btn-primary {
+  background-color: #fff;
+  color: black;
+}
 .no-button {
   background: none;
   border: none;
@@ -13,7 +38,7 @@ header, .project:not(:last-child) {
 }
 
 .no-button:hover {
-  color: #065b83;
+  color: #1b89bc;
   text-decoration: underline;
 }
 
