--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<div class='row mt-4'>
+<div class='row mt-4 hero-image'>
   <div class='col-md-6'>
     <h3>Create a New Post:</h3>
 
@@ -28,14 +28,17 @@
     </form>
   </div>
 
-  {{#if post.length}}
+  {{#if posts.length}}
     <div class='col-md-6 post-list'>
       <h3>Posts:</h3>
 
-      {{#each post as |post|}}
+      {{#each posts as |post|}}
         <div class='row mb-2'>
           <div class='col-md-8'>
-            <h4><a href='/post/{{post.id}}'>{{post.title}}</a></h4>
+            <h4><a
+                href='/post/{{post.id}}'
+                class='rainbow'
+              >{{post.title}}</a></h4>
           </div>
           <div class='col-md-4'>
             <button
