--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,5 +1,5 @@
 <div class='col-md-6 comment-list'>
-  {{#if comments.length}}
+  {{#if comments}}
 
     <h3>Comments:</h3>
 
@@ -21,6 +21,10 @@
         </div>
       </div>
     {{/each}}
+
+    {{#else}}
+      <h3>NO comments found</h3>
+    {{/else}}
   {{/if}}
 </div>
 <script src='/js/comment.js'></script>
