--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -11,7 +11,7 @@
               class='rainbow'
             >{{comment.title}}</a></h4>
           <p>Created by
-            {{user.dataValues.name}}
+            {{comment.user_id}}
             on
             {{format_date date_created}}</p>
           <p>{{comment.description}}</p>
