--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <!-- Loop over each object in the post array -->
-{{#each post as |[post|}}
+{{#each post as |post|}}
   <div class='row mb-4 post'>
     <div class='col-md-5'>
       <h2>
