--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,8 @@
         <nav>
           <!-- Conditionally render login or logout links -->
           {{#if logged_in}}
+            <a href='/'>home</a>
+            |
             <a href='/profile'>profile</a>
             |
             <button class='no-button' id='logout'>logout</button>
