--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -33,7 +33,7 @@
             </button>
           </div>
           <div class='modal-body'>
-            <form class='new-comment-form'>
+            <form data-id="{{post.id}}" class='new-comment-form'>
               <div class='form-group'>
                 <label
                   for='comment-title'
